--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>React App</title>
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/${VERSION}/kakao.min.js"
+    integrity="${INTEGRITY_VALUE}" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
