--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Grilled Shirimp</title>
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/${VERSION}/kakao.min.js"
     integrity="${INTEGRITY_VALUE}" crossorigin="anonymous"></script>
   </head>
